openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pco-api-wrapper
  labels:
    app: pco-api-wrapper
spec:
  to:
    kind: Service
    name: pco-api-wrapper
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
